src/components/Cart/Cart.scss
@import '../../styles/variables';
@import '../../styles/mixins';

@keyframes pop {
  from {
    transform: scale((1.4));
  }
  to {
    transform: scale(1);
  }
}

.pop {
  animation: pop 0.3s ease-out;
}

.cart-btn {
  @include flex-center;
  background-color: $color-red;
  border-radius: 50%;
  width: 3.5rem;
  height: 3.5rem;
  position: relative;
  &__logo {
    fill: white;
    width: 1.5rem;
    height: 1.5rem;
    transform: translateX(-0.1rem);
  }
  &__num {
    color: white;
    position: absolute;
    background-color: $color-yellow;
    top: -0.4rem;
    right: -0.5rem;
    border-radius: 50%;
    width: 1.5rem;
    height: 1.5rem;
    @include flex-center;
    font-size: 0.8rem;
  }
}

@keyframes slideIn {
  0% {
    transform: translateX(25vw);
  }
  70% {
    transform: translateX(-5vw);
  }
  100% {
    transform: 0;
  }
}

.cart {
  display: flex;
  flex-direction: column;
  background-color: $color-dark;
  color: $color-light-grey;
  position: fixed;
  right: 0;
  top: 0;
  padding: 2rem;
  height: 100vh;
  width: 25vw;
  animation: slideIn 0.3s ease-out forwards;
  z-index: 1000;

  &__close {
    position: absolute;
    top: 0;
    left: -3rem;
    background-color: $color-dark;
    color: white;
    padding: 1.5rem;
  }

  &__header {
    @include flex-center;
    padding: 2rem 0;
    gap: 1rem;

    &__logo {
      position: relative;
      .cart-btn__logo {
        height: 2rem;
        width: 2rem;
      }
      .cart-btn__num {
        top: -1.4rem;
        right: -1rem;
      }
    }
  }

  &__items {
    overflow-y: scroll;
  }

  &__footer {
    width: inherit;
    position: absolute;
    bottom: 0;
    height: 240px;
    background-color: $color-dark;
    &__subtotal {
      display: flex;
      justify-content: space-between;
      align-items: center;

      p {
        text-transform: uppercase;
        color: grey;
      }
      h3 {
        color: $color-yellow;
        font-size: 1.5rem;
      }
    }
    button {
      width: 100%;
      background-color: black;
      color: white;
      text-transform: uppercase;
      font-size: 1rem;
      padding: 1rem 0;
      &:hover {
        background-color: $color-red;
      }
    }
  }
}

